# edurecom

./: .gitignore  Ev2.md  RAILWAY_DEPLOYMENT.md  README.md  README_RAILWAY.md  __init__.py  app.py  config.py  create_admin.py  env.example  forms.py  init_data.py  load_courses.py  logging_config.py  models.py  pyproject.toml  questions_admin.json  requirements.txt  routes.py  utils.py
MDS/: casos_uso_diagrama.md  diagrama_clases.md  diagrama_entidad_relacion.md  informe_prototipo_interfaz.md  script_sql_edurecom.sql
clustering/: __init__.py  auto_assignment.py  clustering_engine.py  data_preprocessing.py  feature_engineering.py
docs/: AUDITORIA_PROYECTO.md
docs/results/: RECOMENDACIONES_MEJORA_CLUSTERING.md  RESULTADOS_MEJORAS_CLUSTERING.md
edurecom-master/: README.md  __init__.py  env.example  locustfile.py  requirements.txt  utils.py
edurecom-master/MDS/: cursos.json
edurecom-master/templates/: admin_course_form.html  admin_users.html  login.html  profile_form.html  recommendations.html  register.html
edurecom-master/tests/: test_auth.py
scripts/analysis/: analyze_and_improve_clustering.py
scripts/development/: implement_clustering_improvements.py  improve_clustering_system.py  test_clustering.py  train_clustering.py
static/css/: style.css
templates/: admin_config.html  admin_courses.html  admin_dashboard.html  admin_questions.html  admin_users.html  base.html  index.html  login.html  profile_form.html  recommendations.html  register.html
